--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
@@ -56,7 +56,7 @@
         Task.Run(async () =>
 
         {
-            var search = new ADSearch();
+            var search = new ADSearch(Directory);
             search.Fields.Changed = DateTime.Now.AddDays(-1);
             changdEntries = (await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>()).Where(x => x.CanRead).ToList();
             LoadingData = false;
