--- a/BLAZAMGui/UI/Dashboard/Widgets/DeletedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/DeletedEntriesWidget.razor
@@ -47,7 +47,7 @@
     {
         await base.OnInitializedAsync();
 
-        var search = new ADSearch() { SearchRoot = Directory.GetDeleteObjectsEntry() };
+        var search = new ADSearch(Directory) { SearchRoot = Directory.GetDeleteObjectsEntry() };
         search.SearchDeleted = true;
         search.Fields.Changed = DateTime.Now.AddDays(-14);
         deletedObjects = await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>();
